seeqt/QtMultimedia/gen_qcameraviewfindersettings.h

class QCameraViewfinderSettings;
class QSize;
typedef struct QCameraViewfinderSettings QCameraViewfinderSettings;
typedef struct QSize QSize;
QCameraViewfinderSettings* QCameraViewfinderSettings_new();
QCameraViewfinderSettings* QCameraViewfinderSettings_new2(QCameraViewfinderSettings* other);
void QCameraViewfinderSettings_operatorAssign(QCameraViewfinderSettings* self, QCameraViewfinderSettings* other);
void QCameraViewfinderSettings_swap(QCameraViewfinderSettings* self, QCameraViewfinderSettings* other);
bool QCameraViewfinderSettings_isNull(const QCameraViewfinderSettings* self);
QSize* QCameraViewfinderSettings_resolution(const QCameraViewfinderSettings* self);
void QCameraViewfinderSettings_setResolution(QCameraViewfinderSettings* self, QSize* resolution);
void QCameraViewfinderSettings_setResolution2(QCameraViewfinderSettings* self, int width, int height);
double QCameraViewfinderSettings_minimumFrameRate(const QCameraViewfinderSettings* self);
void QCameraViewfinderSettings_setMinimumFrameRate(QCameraViewfinderSettings* self, double rate);
double QCameraViewfinderSettings_maximumFrameRate(const QCameraViewfinderSettings* self);
void QCameraViewfinderSettings_setMaximumFrameRate(QCameraViewfinderSettings* self, double rate);
int QCameraViewfinderSettings_pixelFormat(const QCameraViewfinderSettings* self);
void QCameraViewfinderSettings_setPixelFormat(QCameraViewfinderSettings* self, int format);
QSize* QCameraViewfinderSettings_pixelAspectRatio(const QCameraViewfinderSettings* self);
void QCameraViewfinderSettings_setPixelAspectRatio(QCameraViewfinderSettings* self, QSize* ratio);
void QCameraViewfinderSettings_setPixelAspectRatio2(QCameraViewfinderSettings* self, int horizontal, int vertical);
void QCameraViewfinderSettings_delete(QCameraViewfinderSettings* self);